--- a/site/s2/index.html
+++ b/site/s2/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title></title>
+  <title>Transit - CSS transitions and transformations for jQuery</title>
   <link href="style.css" rel="stylesheet" />
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.6/prefixfree.min.js"></script>
@@ -15,214 +15,360 @@
   </script>
 </head>
 <body>
-  <div class="nav l-page">
-    <div class="watch right">
-      <iframe src="http://ghbtns.com/github-btn.html?user=rstacruz&repo=jquery.transit&type=watch&count=true"
-        allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
-      <iframe src="http://ghbtns.com/github-btn.html?user=rstacruz&repo=jquery.transit&type=follow&count=true"
-        allowtransparency="true" frameborder="0" scrolling="0" width="153" height="20"></iframe>
-    </div>
-    <ul class="left aux">
-      <li>
-        <a href="#">View source</a>
-      </li>
-      <li>
-        <a href="#">Download</a>
-      </li>
-    </ul>
-  </div>
-
-  <div class="all l-page">
-    <div class="header">
-      <h1>Transit</h1>
-      <p>Super-smooth CSS transitions for jQuery</p>
+  <div class="section top">
+    <div class="nav l-page">
+      <div class="watch right">
+        <iframe src="http://ghbtns.com/github-btn.html?user=rstacruz&repo=jquery.transit&type=watch&count=true"
+          allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
+        <iframe src="http://ghbtns.com/github-btn.html?user=rstacruz&repo=jquery.transit&type=follow&count=true"
+          allowtransparency="true" frameborder="0" scrolling="0" width="153" height="20"></iframe>
+      </div>
+      <ul class="left aux">
+        <li>
+          <a href="#">View source</a>
+        </li>
+        <li>
+          <a href="#">Download</a>
+        </li>
+      </ul>
     </div>
 
-    <div class="download">
-      <a href="jquery.transit.min.js">
-        <span class="in">
-          <span class="inin">
-            <strong>v0.9.9</strong>
-            <small>Download</small>
+    <div class="card title l-page">
+      <div class="header">
+        <h1>Transit</h1>
+        <p>Super-smooth CSS transitions and transformations for jQuery</p>
+      </div>
+
+      <div class="download">
+        <a href="jquery.transit.min.js">
+          <span class="in">
+            <span class="inin">
+              <strong>v0.9.9</strong>
+              <small>Download</small>
+            </span>
           </span>
-        </span>
-      </a>
+        </a>
+      </div>
+
+      <div class="main-notes">
+        <p>
+          <strong>Upgrading notes</strong>
+          Upgrading from an older version? Transit should be mostly backward-compatible.
+          See the <a href="#">change log</a> for notes.
+        </p>
+
+        <p>
+          <strong>Development version</strong>
+          You may also download the <a href="jquery.transit.js">development
+          version</a> which has spaces and comments preserved.
+          Curious to see how it's made? See the <a href="source/">annotated source code</a>!
+        </p>
+      </div>
     </div>
 
-    <div class="section">
-      <p>
-        <strong>Upgrading notes</strong>
-        Upgrading from an older version? Transit should be mostly backward-compatible.
-        See the <a href="#">change log</a> for notes.
-      </p>
+    <!-- ============================================================================ -->
 
-      <p>
-        <strong>Development version</strong>
-        You may also download the <a href="jquery.transit.js">development
-        version</a> which has spaces and comments preserved.
-        Curious to see how it's made? See the <a href="source/">annotated source code</a>!
-      </p>
+    <div class="heading l-page">
+      <h2>Transformations</h2>
+      <p>Hover to see it work.</p>
+    </div>
+
+    <div class="examples l-page">
+
+      <div class="example">
+        <div class="in">
+          <h3>Translate X</h3>
+          <div class="area">
+            <div class="box"></div>
+          </div>
+          <div class="code">
+            <pre>$('.box').transition({ <b>x: '40px'</b> });</pre>
+          </div>
+        </div>
+      </div>
+
+      <div class="example">
+        <div class="in">
+          <h3>Translate Y</h3>
+          <div class="area">
+            <div class="box"></div>
+          </div>
+          <div class="code">
+            <pre>$('.box').transition({ <b>y: '40px'</b> });</pre>
+          </div>
+        </div>
+      </div>
+
+      <div class="example">
+        <div class="in">
+          <h3>Translate X/Y</h3>
+          <div class="area">
+            <div class="box"></div>
+          </div>
+          <div class="code">
+            <pre>$('.box').transition({ <b>x: '40px', y: '40px'</b> });</pre>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 
-  <div class="heading l-page">
-    <h2>Transformations</h2>
-    <p>Hover to see it work.</p>
+  <!-- ============================================================================ -->
+
+  <div class="section usage">
+    <div class="heading l-page">
+      <h2>How to use Transit</h2>
+    </div>
+
+    <div class="subcontent card l-page">
+      <div class="info">
+        <h3>Usage is simple!</h3>
+        <p>
+          Just include this script after jQuery. Requires jQuery 1.4+.  Use
+          <code>$('...').transition</code> instead of jQuery's
+          <code>$('...').animate.</code> It has the same syntax as animate.
+        </p>
+      </div>
+      <div class="code">
+        <pre>$("div").transition({ x: 200 });</pre>
+      </div>
+      <div class="info">
+        <h3>Transformations</h3>
+        <p>
+          Transit provides the following transformations for use with
+          <code>$('...').transition</code> and <code>$('...').css</code>. See
+          the <a href="https://github.com/rstacruz/jquery.transit#readme">README</a>
+          file for more information.
+        </p>
+      </div>
+      <div class="code transformations-list">
+        <ul>
+          <li><strong>x</strong> <small>(px)</small></li>
+          <li><strong>y</strong> <small>(px)</small></li>
+          <li><strong>translate</strong> <small>(x, y)</small></li>
+          <li><strong>rotate</strong> <small>(deg)</small></li>
+          <li><strong>rotateX</strong> <small>(deg)</small></li>
+          <li><strong>rotateY</strong> <small>(deg)</small></li>
+          <li><strong>rotate3d</strong> <small>(x, y, z, deg)</small></li>
+          <li><strong>scale</strong> <small>(x, [y])</small></li>
+          <li><strong>perspective</strong> <small>(px)</small></li>
+          <li><strong>skewX</strong> <small>(deg)</small></li>
+          <li><strong>skewY</strong> <small>(deg)</small></li>
+        </ul>
+      </div>
+    </div>
   </div>
 
-  <div class="examples l-page">
+  <!-- ============================================================================ -->
 
-    <div class="example">
-      <div class="in">
-        <h3>Translate X</h3>
-        <div class="area">
-          <div class="box"></div>
-        </div>
-        <div class="code">
-          <pre>$('.box').transition({ <b>x: '40px'</b> });</pre>
-        </div>
-      </div>
+  <div class="more section">
+    <div class="heading l-page">
+      <h2>More transformations</h2>
     </div>
 
-    <div class="example">
-      <div class="in">
-        <h3>Translate Y</h3>
-        <div class="area">
-          <div class="box"></div>
-        </div>
-        <div class="code">
-          <pre>$('.box').transition({ <b>y: '40px'</b> });</pre>
+    <div class="examples l-page">
+
+      <div class="example">
+        <div class="in">
+          <h3>Rotate</h3>
+          <div class="area">
+            <div class="box"></div>
+          </div>
+          <div class="code">
+            <pre>$('.box').transition({ <b>rotate: '45deg'</b> });</pre>
+          </div>
         </div>
       </div>
+
+      <div class="example">
+        <div class="in">
+          <h3>Scale</h3>
+          <div class="area">
+            <div class="box"></div>
+          </div>
+          <div class="code">
+            <pre>$('.box').transition({ <b>scale: 2.2</b> });</pre>
+          </div>
+        </div>
+      </div>
+
+      <div class="example">
+        <div class="in">
+          <h3>Scale independently</h3>
+          <div class="area">
+            <div class="box"></div>
+          </div>
+          <div class="code">
+            <pre>$('.box').transition({ <b>scale: [2.0, 1.5]</b> });</pre>
+          </div>
+        </div>
+      </div>
+
+      <div class="example">
+        <div class="in">
+          <h3>Skew X</h3>
+          <div class="area">
+            <div class="box"></div>
+          </div>
+          <div class="code">
+            <pre>$('.box').transition({ <b>skewX: '30deg'</b> });</pre>
+          </div>
+        </div>
+      </div>
+
+      <div class="example">
+        <div class="in">
+          <h3>Skew Y</h3>
+          <div class="area">
+            <div class="box"></div>
+          </div>
+          <div class="code">
+            <pre>$('.box').transition({ <b>skewY: '30deg'</b> });</pre>
+          </div>
+        </div>
+      </div>
+
     </div>
 
-    <div class="example">
-      <div class="in">
-        <h3>Translate X/Y</h3>
-        <div class="area">
-          <div class="box"></div>
+    <div class="heading l-page">
+      <h2>3D transformations</h2>
+      <p>You may rotate using <code>rotateX</code> and <code>rotateY</code>.
+      Using <code>perspective</code> is optional, but it should always come
+      before rotateX/Y. Try it in Firefox 10+ or Webkit browsers!</p>
+    </div>
+
+    <div class="examples l-page">
+
+      <div class="example">
+        <div class="in">
+          <h3>Rotate X</h3>
+          <div class="area">
+            <div class="box"></div>
+          </div>
+          <div class="code">
+            <pre>$('.box').transition({<br>  <b>perspective: '100px',</b><br>  <b>rotateX: '180deg'</b><br>});</pre>
+          </div>
         </div>
-        <div class="code">
-          <pre>$('.box').transition({ <b>x: '40px', y: '40px'</b> });</pre>
+      </div>
+
+      <div class="example">
+        <div class="in">
+          <h3>Rotate Y</h3>
+          <div class="area">
+            <div class="box"></div>
+          </div>
+          <div class="code">
+            <pre>$('.box').transition({<br>  <b>perspective: '100px',</b><br>  <b>rotateY: '180deg'</b><br>});</pre>
+          </div>
+        </div>
+      </div>
+
+      <div class="example">
+        <div class="in">
+          <h3>Rotate 3D</h3>
+          <div class="area">
+            <div class="box"></div>
+          </div>
+          <div class="code">
+            <pre>$('.box').transition({<br>  <b>perspective: '100px',</b><br>  <b>rotate3d: '1,1,0,180deg'</b><br>});</pre>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="heading l-page">
+      <h2>Other properties</h2>
+      <p>You can transition any property.</p>
+    </div>
+
+    <div class="examples l-page">
+
+      <div class="example slim white">
+        <div class="in">
+          <div class="area">
+            <div class="box"></div>
+          </div>
+          <div class="code">
+            <pre>$('.box').transition({ <b>opacity: 0</b> });</pre>
+          </div>
+        </div>
+      </div>
+
+      <div class="example slim white">
+        <div class="in">
+          <div class="area">
+            <div class="box"></div>
+          </div>
+          <div class="code">
+            <pre>$('.box').transition({ <b>marginLeft: '20px'</b>, <b>height: '50px'</b> });</pre>
+          </div>
         </div>
       </div>
     </div>
 
   </div>
 
-  <div class="heading l-page">
-    <h2>More transformations</h2>
-  </div>
+  <!-- ============================================================================ -->
 
-  <div class="examples l-page">
-
-    <div class="example">
-      <div class="in">
-        <h3>Rotate</h3>
-        <div class="area">
-          <div class="box"></div>
-        </div>
-        <div class="code">
-          <pre>$('.box').transition({ <b>rotate: '45deg'</b> });</pre>
-        </div>
-      </div>
+  <div class="easing section">
+    <div class="heading l-page">
+      <h2>Easing</h2>
+      <p>Simply provide a 3rd parameter to <code>$.transition</code>.</p>
     </div>
 
-    <div class="example">
-      <div class="in">
-        <h3>Scale</h3>
-        <div class="area">
-          <div class="box"></div>
-        </div>
-        <div class="code">
-          <pre>$('.box').transition({ <b>scale: 2.2</b> });</pre>
+    <div class="examples l-page">
+
+      <div class="example slim white start-from-left">
+        <div class="in">
+          <div class="area">
+            <div class="box"></div>
+          </div>
+          <div class="code">
+            <h4>Linear</h4>
+            <pre>$('.box').transition({ x: 210 }, 500, <b>'linear'</b>);</pre>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="example">
-      <div class="in">
-        <h3>Scale independently</h3>
-        <div class="area">
-          <div class="box"></div>
-        </div>
-        <div class="code">
-          <pre>$('.box').transition({ <b>scale: [2.0, 1.5]</b> });</pre>
+      <div class="example slim white start-from-left">
+        <div class="in">
+          <div class="area">
+            <div class="box"></div>
+          </div>
+          <div class="code">
+            <h4>Ease</h4>
+            <pre>$('.box').transition({ x: 210 }, 500, <b>'ease'</b>);</pre>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="example">
-      <div class="in">
-        <h3>Skew X</h3>
-        <div class="area">
-          <div class="box"></div>
-        </div>
-        <div class="code">
-          <pre>$('.box').transition({ <b>skewX: '30deg'</b> });</pre>
+      <div class="example slim white start-from-left">
+        <div class="in">
+          <div class="area">
+            <div class="box"></div>
+          </div>
+          <div class="code">
+            <h4>Snap</h4>
+            <pre>$('.box').transition({ x: 210 }, 500, <b>'snap'</b>);</pre>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="example">
-      <div class="in">
-        <h3>Skew Y</h3>
-        <div class="area">
-          <div class="box"></div>
-        </div>
-        <div class="code">
-          <pre>$('.box').transition({ <b>skewY: '30deg'</b> });</pre>
-        </div>
-      </div>
-    </div>
-
-  </div>
-
-  <div class="heading l-page">
-    <h2>3D transformations</h2>
-    <p>You may rotate using <code>rotateX</code> and <code>rotateY</code>.
-    Using <code>perspective</code> is optional, but it should always come
-    before rotateX/Y. Try it in Firefox 10+ or Webkit browsers!</p>
-  </div>
-
-  <div class="examples l-page">
-
-    <div class="example">
-      <div class="in">
-        <h3>Rotate X</h3>
-        <div class="area">
-          <div class="box"></div>
-        </div>
-        <div class="code">
-          <pre>$('.box').transition({<br>  <b>perspective: '100px',</b><br>  <b>rotateX: '180deg'</b><br>});</pre>
+      <div class="example slim white start-from-left">
+        <div class="in">
+          <div class="area">
+            <div class="box"></div>
+          </div>
+          <div class="code">
+            <h4>Custom</h4>
+            <pre>$('.box').transition({ x: 210 }, 500, <b>'cubic-bezier(0,0.9,0.3,1)'</b>);</pre>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="example">
-      <div class="in">
-        <h3>Rotate Y</h3>
-        <div class="area">
-          <div class="box"></div>
-        </div>
-        <div class="code">
-          <pre>$('.box').transition({<br>  <b>perspective: '100px',</b><br>  <b>rotateY: '180deg'</b><br>});</pre>
-        </div>
-      </div>
     </div>
-
-    <div class="example">
-      <div class="in">
-        <h3>Rotate 3D</h3>
-        <div class="area">
-          <div class="box"></div>
-        </div>
-        <div class="code">
-          <pre>$('.box').transition({<br>  <b>perspective: '100px',</b><br>  <b>rotate3d: '1,1,0,180deg'</b><br>});</pre>
-        </div>
-      </div>
-    </div>
-
   </div>
 
 </body>
