--- a/site/s2/index.html
+++ b/site/s2/index.html
@@ -75,7 +75,17 @@
       </div>
     </div>
 
-    <!-- ============================================================================ -->
+    <div class="o-line"></div>
+
+  </div>
+
+  <!-- ============================================================================ -->
+
+  <div class="gap">
+    <a href="#top" class="thing"></a>
+  </div>
+
+  <div class="section after-top">
 
     <div class="heading l-page">
       <h2>Transitions <span class="amp">&amp;</span> transformations</h2>
@@ -167,6 +177,8 @@
         </ul>
       </div>
     </div>
+
+    <div class="o-line"></div>
   </div>
 
   <!-- ============================================================================ -->
@@ -642,6 +654,7 @@
       </div>
     </div>
 
+    <div class="o-line"></div>
   </div>
 
   <!-- ============================================================================ -->
