Fix tests so they work with jQuery>2.0 as well as the older versions Changed .live handlers to .click etc that works in all jQuery versions

--- a/test/index.html
+++ b/test/index.html
@@ -33,6 +33,7 @@
 <body>
   <div class='use'>
     Use:
+    <a href='index.html?jquery=2.0.3'>jQ 2.0.3</a>
     <a href='index.html?jquery=1.9.0b1'>jQ 1.9.0b1</a>
     <a href='index.html?jquery=1.8.1'>jQ 1.8</a>
     <a href='index.html?jquery=1.7.0'>jQ 1.7</a>
